--- a/first.html
+++ b/first.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play OX Game</title>
     <link rel="stylesheet" href="css/first.css">
+    <link rel="icon" href="images/icon.png">
 </head>
 <body>
     <secction class="main">
         <div class="container">
-            <form action="index.html" method="post">
+            <form action="index.html" >
                 <div class="one">
                     <label for="playerone">First Player</label>
                     <input id="playerone" type="text" name="player one" required placeholder="First Player Name">
@@ -19,11 +20,12 @@
                     <label for="playertwo">Second Player</label>
                     <input id="playertwo" type="text" name="player TWo" required placeholder="Second Player Name">
                 </div>
-                <button type="submit" class="submit">Player</button>
+                <button type="submit" class="submit"> Player </button>
             </form>    
         </div>
 
     </secction>
-    <script src="js/first.js"></script>
+    <script  src="js/first.js"></script>
+    <script type="text/html" src="index.html"></script>
 </body>
 </html>
