--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>OX Game</title>
 	<!-- <link href="css/all.css" rel="stylesheet" type="text/css"> -->
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="images/icon.png">
+
 </head>
 <body>
 
